objects/cpqlabs__Log_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>cpqlabs__Enable_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When True, LogScience will perform its logging functions as configured in the remainder of Log_Settings__mdt</description>
        <label>Enable Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Enable_Pruning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When True, LogScience will perform deletes on persistently-stored logging data in the Log__c object</description>
        <label>Enable Pruning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Interfaced_Class_Order__c</fullName>
        <defaultValue>&quot;LogToObject,SystemDebug&quot;</defaultValue>
        <description>Configure Log_Settings__mdt to determine which functionality is executed when a log request is submitted to LogScience</description>
        <label>Interfaced_Class_Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Max_Number_Of_Logs__c</fullName>
        <description>When greater than 0, the number indicated will inform the Pruning functionality how many log rows it should allow to persist</description>
        <label>Max Number Of Logs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Log_Settings</label>
    <pluralLabel>Log_Settings</pluralLabel>
</CustomObject>